Coordinate transformation from sensor reference system to robot reference system

--- a/UnitTest/Makefile
+++ b/UnitTest/Makefile
@@ -1,8 +1,8 @@
 CXX = g++
 INCLUDES= -I./
 CXXFLAGS = -g $(INCLUDES) -std=c++11
-SRC= ../Curve.cpp ../MatrixR.cpp
-OBJ = Curve.o MatrixR.o
+SRC= ../Curve.cpp ../MatrixR.cpp ../DistanceSensor.cpp ../RobotConfig.cpp
+OBJ = Curve.o MatrixR.o DistanceSensor.o RobotConfig.o
 LINKFLAGS= -lCppUTest -lCppUTestExt
 
 .PHONY: default unittest clean
