Added avoid obstacle behavior, update of MatrixR, testcases

--- a/UnitTest/Makefile
+++ b/UnitTest/Makefile
@@ -1,8 +1,8 @@
 CXX = g++
-INCLUDES= -I./
-CXXFLAGS = -g $(INCLUDES) -std=c++11
-SRC= ../Curve.cpp ../MatrixR.cpp ../DistanceSensor.cpp ../RobotConfig.cpp
-OBJ = Curve.o MatrixR.o DistanceSensor.o RobotConfig.o
+INCLUDES= -I./ -I.. -Imock -IUnitTest/mock
+CXXFLAGS = -g $(INCLUDES) -std=c++11 
+
+OBJ = Curve.o MatrixR.o DistanceSensor.o RobotConfig.o Robot.o Constants.o Controller.o Motor.o PIDController.o RobotSound.o
 LINKFLAGS= -lCppUTest -lCppUTestExt
 
 .PHONY: default unittest clean
@@ -13,6 +13,8 @@ default: unittest
 unittest: RobotTest.cpp $(OBJ)
 	$(CXX) $(CXXFLAGS) -o $@ RobotTest.cpp *.o $(LINKFLAGS) $(LINKFLAGSLOG4) $(LIBLOG)
 
+mock: ./mock/Arduino.cpp
+	$(CXX) $(CXXFLAGS) -c ./mock/Arduino.cpp
 
 include $(OBJ:.o=.d)
 
@@ -20,7 +22,7 @@ include $(OBJ:.o=.d)
 	$(CXX) $(CXXFLAGS) -c $<
 
 %.d: ../%.cpp
-	$(CXX) -MM $(CFLAGS)../$*.cpp > $*.d
+	$(CXX) -MM $(CXXFLAGS) ../$*.cpp > $*.d
 
 clean:
 	rm *.o *.d unittest
